<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">北京公交</string>
    <string name="shishichaxun">实时查询</string>
    <string name="huanshengchaxun">换乘查询</string>
    <string name="button_send">查询</string>
    <string name="luxianfangan">路线方案</string>
    
    <string name="default_line">请输入公交线路名称,如123、专10</string>
    <string name="rule">1、北京实时公交查询提供的信息可为用户出行提供参考，因信息更新等原因可能导致与实际不符，敬请谅解。\n2、由于公交线路还在不断更新补充中，部分线路尚未纳入查询系统，敬请谅解。</string>
    <string name="network_tip">网络状态被关闭</string>
    <string name="station_tip">请注意选择您乘车的方向，不要选错哦</string>
    <string name="no_line">暂无该线路信息</string>
    <string name="no_cars">等待发车</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_scheme">SchemeActivity</string>

    
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing</string>
    <string name="ptr_last_updated">Updated: %1$s</string>

    <!-- 列表页面 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="title_activity_album">AlbumActivity</string>
    
    <string name="retry_large_image"><u>加载失败，点击重试</u></string>
    
    <string name="tips_not_wifi">建议在wifi下观看，土豪请随意</string>
    <string name="tips_not_wifi_confirm">继续播放</string>
    <string name="tips_not_wifi_cancel">停止播放</string>
    <string name="no_url">No mUrl</string>
    
</resources>
