<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ededf0"
    tools:context="com.yhtye.shanghaishishigongjiaochaxun.MainActivity" >

    <RelativeLayout 
        android:layout_width="fill_parent"  
        android:layout_height="60dp"
        android:background="@color/blue">
        
        <TextView android:id="@+id/txtHide" 
            android:layout_width="1dp" 
            android:layout_height="40dp" 
            android:background="@color/white"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" /> 
           
        <Button android:id="@+id/shishichaxun"
            android:background="@drawable/button_left"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/txtHide"
            android:layout_toLeftOf="@id/txtHide" 
            android:text="@string/shishichaxun"
            android:onClick="shishichaxunClick"
            />
        
        <Button android:id="@+id/huanshengchaxun"
            android:background="@drawable/button_right"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:textSize="20sp"
            android:layout_toEndOf="@+id/txtHide"
            android:layout_toRightOf="@id/txtHide"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:text="@string/huanshengchaxun"
            android:onClick="huanshengchaxunClick"
            />
     </RelativeLayout>
     
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
        >
    <ImageView 
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content" 
        android:layout_marginTop="15dip"
        android:layout_marginBottom="15dip"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@drawable/gongjiaologo"/>
    
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/numberone"
            android:textSize="13sp"
            android:hint="@string/default_line"/>
    
    <Button 
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:text="@string/button_send"
        android:id="@+id/hellobutton"
        android:textColor="#ffffff"
        android:background="@drawable/button_chaxun"
        android:textSize="20sp"
        android:layout_marginTop="5dip"
        android:paddingLeft="15dip"
        android:paddingRight="15dip"
        android:onClick="searchLineClick"/>

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:lineSpacingMultiplier="1.5"
        android:textSize="12sp"
        android:textColor="#858f95"
        android:text="@string/rule"/>
    </LinearLayout>
</LinearLayout>
